--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,4 +6,11 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textColor">@color/color_333333</item>
     </style>
+
+    <!--分割线-->
+    <style name="line">
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/color_666666</item>
+    </style>
 </resources>
