--- a/app/src/main/res/layout/item_simple_layout.xml
+++ b/app/src/main/res/layout/item_simple_layout.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="12dp"
-    android:paddingVertical="12dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp"
+    android:layout_marginTop="@dimen/dp_10"
+    android:layout_marginHorizontal="5dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:ignore="UselessParent">
+        android:padding="15dp">
         <TextView
             android:id="@+id/tv_level"
             android:layout_width="0dp"
@@ -34,4 +38,4 @@
             style="@style/text_normal"/>
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
