--- a/app/src/main/res/layout/item_simple_layout.xml
+++ b/app/src/main/res/layout/item_simple_layout.xml
@@ -20,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            style="@style/text_normal"
+            style="@style/style_text_normal"
             tools:text="1"/>
         <TextView
             android:id="@+id/tv_title"
@@ -28,14 +28,14 @@
             android:layout_weight="3"
             android:layout_height="wrap_content"
             tools:text="Item-TitleTitleTitle"
-            style="@style/text_normal"/>
+            style="@style/style_text_normal"/>
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="0dp"
             android:layout_weight="5"
             android:layout_height="wrap_content"
             tools:text="Item-Contentttttttttttttttttt"
-            style="@style/text_normal"/>
+            style="@style/style_text_normal"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
