--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -34,9 +34,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
+        style="@style/style_btn_normal"
         android:id="@+id/btn_register"
-        android:layout_width="0dp"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginHorizontal="12dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register"
         app:layout_constraintEnd_toEndOf="parent"
