--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="color_D6D6D6">#D6D6D6</color>
     <color name="color_FF0000">#FF0000</color>
     <color name="color_00FF00">#00FF00</color>
+    <color name="color_212121">#212121</color>
+    <color name="color_757575">#757575</color>
 </resources>
