--- a/app/src/main/res/layout/include_empty_view.xml
+++ b/app/src/main/res/layout/include_empty_view.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="@string/no_data_now"
+        android:text="@string/no_data"
         android:textColor="@color/color_333333"
         android:textSize="15sp"
         android:gravity="center"
