--- a/app/src/main/res/layout/item_style1.xml
+++ b/app/src/main/res/layout/item_style1.xml
@@ -6,44 +6,55 @@
     android:layout_marginHorizontal="5dp"
     android:layout_marginTop="@dimen/dp_10"
     android:orientation="vertical"
-app:cardBackgroundColor="@color/colorPrimary"
-
+    app:cardBackgroundColor="@color/colorPrimary"
     app:cardCornerRadius="10dp"
     app:cardElevation="8dp">
 
     <LinearLayout
+        android:id="@+id/lay_provider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="5dp"
-        android:paddingVertical="@dimen/dp_10">
+        android:paddingVertical="@dimen/dp_10"
+        android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_style1"
-            style="@style/style_text_primary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Item类型1" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_style1"
+                style="@style/style_text_primary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Item类型1" />
 
-        <View
-            style="@style/style_line_normal"
-            android:layout_width="0.5dp"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp" />
+            <View
+                style="@style/style_line_normal"
+                android:layout_width="0.5dp"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_page_status_error" />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_page_status_error" />
 
-        <View
-            style="@style/style_line_normal"
-            android:layout_width="0.5dp"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp" />
+            <View
+                style="@style/style_line_normal"
+                android:layout_width="0.5dp"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_page_status_data" />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_page_status_data" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
