--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="color_00FF00">#00FF00</color>
     <color name="color_212121">#212121</color>
     <color name="color_757575">#757575</color>
+    <color name="color_F5F5F5">#F5F5F5</color>
 </resources>
