--- a/app/src/main/res/layout/dialog_bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_layout.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:background="@drawable/bg_top_radius_left_right">
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_top_radius_left_right"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/lay_item3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_item1"
+            android:id="@+id/tv_item3"
             style="@style/style_text_primary"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -17,6 +23,13 @@
             style="@style/style_line_f5f5f5"
             android:layout_width="match_parent"
             android:layout_height="1dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lay_item2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_item2"
@@ -29,23 +42,33 @@
             style="@style/style_line_f5f5f5"
             android:layout_width="match_parent"
             android:layout_height="1dp" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/lay_item1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_item3"
+            android:id="@+id/tv_item1"
             style="@style/style_text_primary"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="@string/demo_show_short_toast" />
+    </LinearLayout>
 
-        <View
-            style="@style/style_line_f5f5f5"
-            android:layout_width="match_parent"
-            android:layout_height="10dp" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_cancel"
-            style="@style/style_text_primary"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="@string/cancel" />
+    <View
+        style="@style/style_line_f5f5f5"
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_cancel"
+        style="@style/style_text_primary"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="@string/cancel" />
 </LinearLayout>
