--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -85,4 +85,20 @@
         <!--背景不变暗-->
         <!--        <item name="android:backgroundDimEnabled">false</item>-->
     </style>
+
+    <declare-styleable name="SwipeLayout">
+        <attr name="preview" format="enum">
+            <enum name="none" value="0"/>
+            <enum name="left" value="1"/>
+            <enum name="right" value="2"/>
+            <enum name="start" value="3"/>
+            <enum name="end" value="4"/>
+        </attr>
+        <attr name="autoClose" format="boolean"/>
+        <attr name="designer" format="string"/>
+    </declare-styleable>
+
+    <declare-styleable name="SwipeMenuRecyclerView">
+        <attr name="enableTouchAlways" format="boolean"/>
+    </declare-styleable>
 </resources>
