--- a/app/src/main/res/layout/item_swipe_simple_layout.xml
+++ b/app/src/main/res/layout/item_swipe_simple_layout.xml
@@ -52,7 +52,8 @@
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:gravity="center"
             android:text="Content"
             android:background="@color/white"
