--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -101,4 +101,9 @@
     <declare-styleable name="SwipeMenuRecyclerView">
         <attr name="enableTouchAlways" format="boolean"/>
     </declare-styleable>
+
+    <declare-styleable name="AlignTextView">
+        <attr name="alignOnlyOneLine" format="boolean"/>
+    </declare-styleable>
+
 </resources>
